--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,79 @@ body, html {
     font-family: monospace;
 }
 
+.LeftBox {
+    position: relative;
+    height: 68%;
+    width: 15%;
+    left: 10%;
+    top: 11%;
+}
+
+.PC {
+    border: solid 1px black;
+    position: relative;
+    height: 30%;
+    width: 100%;
+}
+
+.PC img {
+    height: 100%;
+    width: 100%;
+}
+
+.Playstation {
+    border: solid 1px black;
+    position: relative;
+    height: 30%;
+    width: 100%;
+    margin-top: 5%;
+}
+
+.Playstation img {
+    height: 100%;
+    width: 100%;
+}
+
+.Xbox {
+    border: solid 1px black;
+    position: relative;
+    height: 30%;
+    width: 100%;
+    margin-top: 5%;
+}
+
+.Xbox img {
+    height: 100%;
+    width: 100%;
+}
+
+.BigBox {
+    border: solid 2px black;
+    position: relative;
+    float: right;
+    height: 64%;
+    width: 65%;
+    right: 4%;
+    bottom: 57%;
+}
+
+.TextBox {
+    border: solid 1px white;
+    position: relative;
+    height: 20%;
+    width: 50%;
+    left: 25%;
+    top: 5%;
+}
+
+.ShownItems {
+    border: solid 1px white;
+    position: relative;
+    height: 55%;
+    width: 100%;
+    top: 25%;
+}
+
 .Footer {
     position: fixed;
     left: 0;
