--- a/css/style.css
+++ b/css/style.css
@@ -194,6 +194,77 @@ body, html {
     top: 24%;
 }
 
+.form {
+    border: solid darkgreen 2px;
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-bottom: 10px;
+    padding-top: 30px;
+    margin: 10px auto;
+    height: 570px;
+    width: 500px;
+    background-color: none;
+    color: white;
+}
+
+.form li {
+    padding: 0;
+	display: block;
+	list-style: none;
+	margin: 10px 0 0 0;
+}
+
+.form p {
+    font-weight: bold;
+    padding-top: 2px;
+}
+
+.form label {
+    margin:0 0 3px 0;
+	padding:0px;
+	display:block;
+	font-weight: bold;
+}
+
+.form input::placeholder {
+    color: black;
+}
+
+.form .field-divide {
+	width: 49%;
+}
+
+.form .field-long {
+	width: 100%;
+}
+
+.form .field-select {
+	width: 100%;
+}
+
+.form .field-textarea {
+	height: 100px;
+}
+
+.SubmitButton {
+    position: relative;
+    color: white;
+    background-color: green;
+    text-align: center;
+    font-family: monospace;
+}
+
+.SubmitButton:hover,
+.SubmitButton:focus {
+  box-shadow: 0 0.5em 0.5em -0.4em var(--hover);
+  transform: translateY(-0.25em);
+}
+
+.form .required {
+	color: darkgreen;
+}
+
+
 .Footer {
     position: fixed;
     left: 0;
