--- a/css/style.css
+++ b/css/style.css
@@ -274,6 +274,247 @@ body, html {
     text-align: center;
 }
 
+#firstbox {
+    width: 260px;
+    height: 320px;
+    border: 2px solid white;
+    color: white;
+    position: absolute;
+    margin-left: 160px;
+    margin-top: 40px;
+}
+
+.button {
+    display: inline-block;
+    border-radius: 4px;
+    background-color: #2ed62e;
+    border: none;
+    color: #FFFFFF;
+    text-align: center;
+    font-size: 28px;
+    padding: 20px;
+    width: 242px;
+    height: 70px;
+    transition: all 0.5s;
+    cursor: pointer;
+    margin-top: 220px;
+    margin-left: 5px;
+  }
+  
+  .button span {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 0.5s;
+  }
+  
+  .button span:after {
+    content: '\00bb';
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -20px;
+    transition: 0.5s;
+  }
+  
+  .button:hover span {
+    padding-right: 25px;
+  }
+  
+  .button:hover span:after {
+    opacity: 1;
+    right: 0;
+  }
+
+  #text {
+    width: 260px;
+    height: 80px;
+    border: 2px solid white;
+    color: white;
+    position: absolute;
+    margin-left: -2px;
+    margin-top: 6px;
+    text-align: center;
+}
+
+#secondbox {
+    width: 260px;
+    height: 320px;
+    border: 2px solid white;
+    color: white;
+    position: absolute;
+    margin-left: 444px;
+    margin-top: 40px;
+}
+
+#thirdbox {
+    width: 260px;
+    height: 320px;
+    border: 2px solid white;
+    color: white;
+    position: absolute;
+    margin-left: 732px;
+    margin-top: 40px;
+}
+
+#fourthbox {
+    width: 260px;
+    height: 320px;
+    border: 2px solid white;
+    color: white;
+    position: absolute;
+    margin-left: 1016px;
+    margin-top: 40px;
+}
+
+#fifthbox {
+    width: 260px;
+    height: 320px;
+    border: 2px solid white;
+    color: white;
+    position: absolute;
+    margin-left: 1300px;
+    margin-top: 40px;
+}
+
+#products {
+    margin-left: 80px;
+}
+
+#sixthbox {
+    width: 260px;
+    height: 320px;
+    border: 2px solid white;
+    color: white;
+    position: absolute;
+    margin-left: 160px;
+    margin-top: 480px;
+}
+
+
+#seventhbox {
+    width: 260px;
+    height: 320px;
+    border: 2px solid white;
+    color: white;
+    position: absolute;
+    margin-left: 444px;
+    margin-top: 480px;
+}
+
+#eightbox {
+    width: 260px;
+    height: 320px;
+    border: 2px solid white;
+    color: white;
+    position: absolute;
+    margin-left: 732px;
+    margin-top: 480px;
+}
+
+#ninebox {
+    width: 260px;
+    height: 320px;
+    border: 2px solid white;
+    color: white;
+    position: absolute;
+    margin-left: 1016px;
+    margin-top: 480px;
+}
+
+#tenthbox {
+    width: 260px;
+    height: 320px;
+    border: 2px solid white;
+    color: white;
+    position: absolute;
+    margin-left: 1300px;
+    margin-top: 480px;
+}
+
+
+#frmContact {
+    border: white 2px solid;
+    background: transparent;
+	padding: 10px;
+}
+
+#frmContact div {
+	margin-bottom: 20px;
+}
+
+#frmContact div label {
+	margin: 5px 0px 0px 5px;    
+	color: white;
+}
+
+.demoInputBox {
+	padding: 10px;
+	border: #a5d2ca 1px solid;
+	border-radius: 4px;
+	background-color: #FFF;
+	width: 100%;
+    margin-top:5px;
+}
+
+.error {
+	background-color: #FF6600;
+    padding: 8px 10px;
+    color: #FFFFFF;
+    border-radius: 4px;
+    font-size: 0.9em;
+}
+
+.success {
+	background-color: #c3c791;
+	padding: 8px 10px;
+	color: #FFFFFF;
+	border-radius: 4px;
+    font-size: 0.9em;
+}
+
+.info {
+	font-size: .8em;
+	color: #FF6600;
+	letter-spacing: 2px;
+	padding-left: 5px;
+}
+
+.btnAction {
+	background-color: green;
+    padding: 10px 40px;
+    color: #FFF;
+    border: #739690 1px solid;
+    border-radius: 4px; 
+}
+
+.btnAction:focus {
+	outline:none;
+}
+.column-right
+{
+    margin-right: 6px;
+}
+.contact-row
+{
+    display: inline-block;
+    width: 32%;
+}
+@media all and (max-width: 550px) {
+    .contact-row {
+        display: block;
+        width: 100%;
+    }
+}
+
+#contactus-text {
+    color: white;
+    font-size: 80px;
+    text-align: center;
+    margin-top: 144px;
+}
+
+
 @media screen and (max-width:800px) {
     .middle-text h1, .middle-text h2{
         font-size: 20px;
