--- a/css/style.css
+++ b/css/style.css
@@ -598,6 +598,83 @@ body, html {
     list-style: none; 
 }
 
-.form ul li{
+.formpje li{
     list-style-type: none;
+}
+
+.form {
+    border: solid green 2px;
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-bottom: 10px;
+    padding-top: 30px;
+    margin:10px auto;
+    height: 570px;
+    width: 500px;
+    background-color: none;
+    color: white;
+}
+
+.form li {
+    padding: 0;
+	display: block;
+	list-style: none;
+	margin: 10px 0 0 0;
+}
+
+.form p {
+    font-weight: bold;
+    padding-top: 2px;
+}
+
+.form label {
+    margin:0 0 3px 0;
+	padding:0px;
+	display:block;
+	font-weight: bold;
+}
+
+.form input::placeholder {
+    color: black;
+}
+
+.form .field-divide {
+	width: 49%;
+}
+
+.form .field-long {
+	width: 100%;
+}
+.form .field-select {
+	width: 100%;
+}
+.form .field-textarea {
+	height: 100px;
+}
+.form input [type=submit], .form-style-1 input[type=button] {
+	background: purple;
+	padding: 8px 15px 8px 15px;
+	border: none;
+	color: #fff;
+}
+.form input [type=submit]:hover, .form-style-1 input[type=button]:hover {
+	background: purple;
+	box-shadow:none;
+	-moz-box-shadow:none;
+	-webkit-box-shadow:none;
+}
+.form .required {
+	color: lightgreen;
+}
+
+.SubmitButton {
+	background-color: green;
+    padding: 10px 40px;
+    color: #FFF;
+    border: #739690 1px solid;
+    border-radius: 4px; 
+}
+
+.SubmitButton:focus {
+	outline:none;
 }
