--- a/css/style.css
+++ b/css/style.css
@@ -612,7 +612,7 @@ body, html {
     height: 570px;
     width: 500px;
     background-color: none;
-    color: white;
+    color: black;
 }
 
 .form li {
