--- a/css/Style.css
+++ b/css/Style.css
@@ -7,7 +7,7 @@ body, html {
     background-image: url("../img/a27fe2fe7a7537392ae0d468a7a8ab5e.jpg");
     height: 100%;
     width: 100%; 
-
+    position: fixed;
     /* Center and scale the image nicely */
     background-position: center;
     background-repeat: no-repeat;
@@ -114,11 +114,12 @@ body, html {
     margin-left: 1%;
 }
 
-.ProductItem {
+.product-item {
     border: solid 2px black;
     position: relative;
     height: 75%;
     width: 100%;
+    overflow: visible;
 }
 
 .ItemPrice {
